<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_back" android:icon="@drawable/ic_back_24" android:title="@string/back"/>
    <item android:id="@+id/menu_forward" android:icon="@drawable/ic_forward_24" android:title="@string/forward"/>
    <item android:id="@+id/menu_refresh" android:icon="@drawable/ic_refresh_24" android:title="@string/refresh"/>
    <item android:id="@+id/menu_new_tab" android:icon="@drawable/ic_add_24" android:title="@string/new_tab"/>
    <item android:id="@+id/menu_history" android:icon="@drawable/ic_history_24" android:title="@string/history"/>
    <item android:id="@+id/menu_bookmarks" android:icon="@drawable/ic_bookmark_24" android:title="@string/bookmarks"/>
    <item android:id="@+id/menu_share" android:icon="@drawable/ic_share_24" android:title="@string/share"/>
    <item android:id="@+id/menu_settings" android:icon="@drawable/ic_settings_24" android:title="@string/settings"/>
    <item android:id="@+id/menu_about" android:icon="@drawable/ic_info_24" android:title="@string/about"/>
</menu>